# guitar-duets-source-separation

./: .gitignore  README.md  environment.yml  merge_midi.py  pyproject.toml  requirements.txt  transcribe.py
configs/: conditioned.yaml  dataset.yaml  unconditioned.yaml
configs/datasets/: guitarrecordings.yaml  guitarrecordings_real.yaml  guitarrecordings_synth.yaml
configs/experiments/: eval_early_fusion.yaml  eval_guitarrecordings.yaml  eval_guitarrecordings_unconditioned.yaml  eval_guitarrecordings_unconditioned_synth.yaml  train_early_fusion.yaml  train_guitarrecordings.yaml  train_guitarrecordings_unconditioned.yaml
configs/models/: htdemucs.yaml
notebooks/: 01_dataset_exploration.ipynb  02_preprocessing.ipynb  02_training_demo.ipynb  03_separation_demo.ipynb  04_evaluation_analysis.ipynb  04_finetune_demucs.ipynb  05_basic_pitch_splitting.ipynb  06_midi_guided_masking.ipynb  07_combined_pipeline.ipynb
scripts/: _bootstrap.py  build_early_fusion_manifest.py  build_metadata.py  create_notes_csv.py  evaluate.py  merge_midi.py  plot_metrics.py  run_pipeline.py  run_pipeline_early_fusion.py  separate.py  separate_early_fusion.py  synthesize_score.py  train.py  train_early_fusion.py  transcribe.py
src/data/: __init__.py  dataset.py  manifests.py  metadata.py
src/evaluation/: __init__.py  bss.py  metrics.py  summarize.py
src/guitarduets/: __init__.py
src/guitarduets/data/: __init__.py  dataset.py  metadata.py
src/guitarduets/evaluation/: __init__.py  metrics.py  sisdr.py  summarize.py
src/guitarduets/inference/: separate.py
src/guitarduets/models/: __init__.py  apply.py  demucs.py  factory.py  hdemucs.py  htdemucs.py  spec.py  states.py
src/guitarduets/plotting/: histograms.py  sdr.py  training.py
src/guitarduets/training/: __init__.py  augment.py  engine.py
src/guitarduets/utils/: audio.py
src/inference/: __init__.py  separate.py
src/models/: __init__.py  apply.py  demucs.py  factory.py  hdemucs.py  htdemucs.py  states.py  transformer.py
src/plotting/: __init__.py  histograms.py  metrics.py
src/training/: __init__.py  augment.py  checkpointing.py  engine.py  losses.py
src/utils/: __init__.py  audio.py  core.py  io.py  paths.py
tests/: test_summarize.py
