[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guitarduets"
version = "0.2.0"
description = "Monotimbral source separation for classical guitar duets, based on GuitarDuets (ISMIR 2024)."
requires-python = ">=3.10"
dependencies = [
  "asteroid",
  "einops",
  "julius>=0.2.3",
  "matplotlib",
  "mido",
  "museval>=0.4.0",
  "numpy<2",
  "omegaconf",
  "openunmix",
  "pandas",
  "PyYAML",
  "scipy",
  "soundfile",
  "threadpoolctl",
  "torch>=2.0",
  "torchaudio>=2.0",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "ipykernel",
  "ipywidgets",
  "librosa",
  "jupyter",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
