[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guitarduets"
version = "0.2.0"
description = "Monotimbral source separation for classical guitar duets, based on GuitarDuets (ISMIR 2024)."
requires-python = ">=3.10"
dependencies = [
  "asteroid",
  "einops",
  "julius>=0.2.3",
  "matplotlib",
  "mido",
  "mir_eval",
  "numpy<2",
  "omegaconf",
  "openunmix",
  "pandas",
  "PyYAML",
  "scipy",
  "soundfile",
  "threadpoolctl",
  "torch>=2.0",
  "torchaudio>=2.0",
  "tqdm",
]

[project.optional-dependencies]
improvements = [
  "basic-pitch[torch]",  # Python <=3.12 only; TF has no 3.13 wheel
  "librosa",
]
dev = [
  "ipykernel",
  "ipywidgets",
  "jupyter",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
